# otxserver

./: .clang-format  .editorconfig  .gitignore  .luarc.json  CMakeLists.txt  schemas.sql
cmake/: FindGMP.cmake
data/XML/: groups.xml  outfits.xml  vocations.xml
data/actions/: actions.xml
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: deathChannel.lua  reportbug.lua
data/globalevents/scripts/: init.lua  record.lua
data/items/: items.xml
data/lib/: lib.lua
data/spells/: spells.xml
data/talkactions/: talkactions.xml
data/talkactions/scripts/: createitem.lua  reload.lua
meta/: functions.lua  types.lua
src/: CMakeLists.txt  account.h  actions.cpp  actions.h  admin.h  allocator.h  baseevents.cpp  baseevents.h  beds.cpp  beds.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  config.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  definitions.h  depot.cpp  depot.h  dispatcher.cpp  dispatcher.h  enums.h  (+124 more)
src/otx/: cast.hpp  util.cpp  util.hpp
vc22/: OTXServer.rc  OTXServer.sln  OTXServer.vcxproj  OTXServer.vcxproj.filters
